--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <td>民族</td>
             <td>汉</td>
             <td rowspan="4" width="140">
-                <img src="照片.png" alt='照片' style="width: 100%;height: 100%;"/></td>
+                <img src="./照片.png" alt='照片' style="width: 100%;height: 100%;"/></td>
         </tr>
         <tr class="center">
             <td>院系专业</td>
