--- a/简历.html
+++ b/简历.html
@@ -64,7 +64,7 @@
                 <p>出生日期：2002.07.24</p> <p>民族：汉</p><br>
             </div>
             <div class="photo">
-                <img src="照片.jpg" width="115" height="155">
+                <img src="./照片.jpg" width="115" height="155">
             </div>
 <!--        </div>-->
         <div class="info">
